# tg_actions

./: .gitignore  README.md  manage_app.py  pyproject.toml  run_bot.py
bot/: main.py
bot/handlers/: __init__.py
bot/handlers/common/: handlers.py  keyboards.py  states.py  text.py
bot/utils/: alert_calculator.py  redis_management.py
bot/utils/keyboards_builder/: action_list.py  callback_data.py
database/mongo/: base.py  crud.py  models.py
settings/: .env.template  config.py
tinkoff_app/: main.py
tinkoff_app/commands/: find_instrument.py
tinkoff_app/core/: app.py  command.py  currensy_calculate.py
tinkoff_app/operations/: alert.py  instruments.py
